ubiquity (1.1.12) UNRELEASED; urgency=low

  * Install apt-setup cdrom generator.
  * Send all internal log messages to syslog rather than stderr.
  * Remove several obsolete functions from ubiquity.misc.
  * Fix misc.ex to use subprocess.call properly rather than smashing
    arguments together and invoking them via the shell.
  * Remove duplicate logging from Install.chrex.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  1 Sep 2006 12:11:33 +0100

ubiquity (1.1.11) edgy; urgency=low

  * Automatic update of included source packages: apt-setup
    1:0.11ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Aug 2006 13:35:52 +0100

ubiquity (1.1.10) edgy; urgency=low

  * GTK frontend: Add apport integration to crash handler. (Not done yet for
    KDE frontend, pending the existence of apport-kde.)
  * Remove abort_dialog cruft.
  * Rewrite doc/README to be reasonably up to date. Among other things, it
    now contains a brief explanation of the debconffilter framework.
  * Fix stringification of our derived exceptions (InstallStepError and
    PartedServerError).
  * Set mirror/suite and mirror/codename instead of the non-existent
    cdrom/suite and cdrom/codename in the apt-setup wrapper (closes: Malone
    #56725).
  * Automatic update of included source packages: hw-detect 1.41ubuntu2,
    kbd-chooser 1.30ubuntu1, partconf 1.17.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 30 Aug 2006 13:27:12 +0100

ubiquity (1.1.9) edgy; urgency=low

  * Use /bin/bash for user-setup due to a dash test(1) bug.
  * GTK frontend: Enable keyboard searching for the keyboard list (closes:
    Malone #56306).
  * Fix incorrect path to languagelist in language component (closes: Malone
    #56721).
  * Automatic update of included source packages: debian-installer-utils
    1.35ubuntu1, kbd-chooser 1.29ubuntu2, localechooser 1.20ubuntu6,
    tzsetup 1:0.10ubuntu2, user-setup 1.2ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Aug 2006 15:25:53 +0100
